--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "description": "A foundation for scalable desktop apps",
+  "description": "Chart application",
   "keywords": [
     "electron",
     "boilerplate",
@@ -21,13 +21,13 @@
   },
   "license": "MIT",
   "author": {
-    "name": "Electron React Boilerplate Maintainers",
+    "name": "Chart app",
     "email": "electronreactboilerplate@gmail.com",
     "url": "https://electron-react-boilerplate.js.org"
   },
   "contributors": [
     {
-      "name": "Amila Welihinda",
+      "name": "Vladi Ivanov",
       "email": "amilajack@gmail.com",
       "url": "https://github.com/amilajack"
     }
@@ -94,11 +94,17 @@
   "dependencies": {
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.7",
+    "electron-settings": "^4.0.2",
     "electron-updater": "^5.0.3",
     "react": "^18.1.0",
+    "react-click-away-listener": "^2.2.1",
+    "react-color": "^2.19.3",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
-    "recharts": "^2.1.13"
+    "react-toastify": "^9.0.8",
+    "recharts": "^2.1.13",
+    "use-interval": "^1.4.0"
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.6",
@@ -168,8 +174,8 @@
     "webpack-merge": "^5.8.0"
   },
   "build": {
-    "productName": "ElectronReact",
-    "appId": "org.erb.ElectronReact",
+    "productName": "Chart App",
+    "appId": "org.erb.ChartApp",
     "asar": true,
     "asarUnpack": "**\\*.{node,dll}",
     "files": [
@@ -215,7 +221,7 @@
       "target": [
         "AppImage"
       ],
-      "category": "Development"
+      "category": "Chart"
     },
     "directories": {
       "app": "release/app",
